--- a/textMining_Kiran.ipynb
+++ b/textMining_Kiran.ipynb
@@ -6112,7 +6112,7 @@
     }
    ],
    "source": [
-    "glove.get('#UNK#')"
+    "glove.get('#UNK#')\n"
    ]
   },
   {
@@ -8472,7 +8472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
