--- a/textMining_Cleaned.ipynb
+++ b/textMining_Cleaned.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch \n",
-    "import numpy as np\n",
-    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.autograd import Variable\n",
     "import copy\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import torch \n",
+    "import numpy as np\n",
+    "import torch.nn as nn"
    ]
   },
   {
