--- a/textMining_Cleaned.ipynb
+++ b/textMining_Cleaned.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ENTY:veh': 0,\n",
+       " 'ENTY:cremat': 1,\n",
+       " 'ENTY:letter': 2,\n",
+       " 'ENTY:plant': 3,\n",
+       " 'ï»¿DESC:manner': 4,\n",
+       " 'NUM:code': 5,\n",
+       " 'ENTY:animal': 6,\n",
+       " 'DESC:desc': 7,\n",
+       " 'ENTY:instru': 8,\n",
+       " 'ENTY:other': 9,\n",
+       " 'ENTY:substance': 10,\n",
+       " 'NUM:perc': 11,\n",
+       " 'DESC:def': 12,\n",
+       " 'LOC:country': 13,\n",
+       " 'ENTY:color': 14,\n",
+       " 'ENTY:techmeth': 15,\n",
+       " 'ABBR:exp': 16,\n",
+       " 'ENTY:dismed': 17,\n",
+       " 'ENTY:currency': 18,\n",
+       " 'NUM:dist': 19,\n",
+       " 'DESC:reason': 20,\n",
+       " 'ENTY:termeq': 21,\n",
+       " 'HUM:gr': 22,\n",
+       " 'LOC:state': 23,\n",
+       " 'LOC:mount': 24,\n",
+       " 'ABBR:abb': 25,\n",
+       " 'ENTY:lang': 26,\n",
+       " 'HUM:title': 27,\n",
+       " 'HUM:desc': 28,\n",
+       " 'NUM:speed': 29,\n",
+       " 'ENTY:religion': 30,\n",
+       " 'NUM:weight': 31,\n",
+       " 'ENTY:sport': 32,\n",
+       " 'NUM:date': 33,\n",
+       " 'NUM:money': 34,\n",
+       " 'ENTY:symbol': 35,\n",
+       " 'ENTY:event': 36,\n",
+       " 'HUM:ind': 37,\n",
+       " 'NUM:period': 38,\n",
+       " 'DESC:manner': 39,\n",
+       " 'ENTY:body': 40,\n",
+       " 'LOC:city': 41,\n",
+       " 'ENTY:food': 42,\n",
+       " 'ENTY:product': 43,\n",
+       " 'NUM:count': 44,\n",
+       " 'NUM:temp': 45,\n",
+       " 'NUM:other': 46,\n",
+       " 'ENTY:word': 47,\n",
+       " 'LOC:other': 48,\n",
+       " 'NUM:volsize': 49,\n",
+       " 'NUM:ord': 50}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,14 +202,14 @@
     "                embeddings[len(indexed_vocab) - 1] = vector\n",
     "        return torch.from_numpy(embeddings).float()\n",
     "\n",
-    "glove = load_glove_embeddings('./glove.small.txt', indexed_vocab)\n",
+    "glove = load_glove_embeddings('./glove.txt', indexed_vocab)\n",
     "embeddings_random = nn.Embedding(glove.size(0), glove.size(1))\n",
     "embeddings_pretrained = nn.Embedding.from_pretrained(glove, freeze=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,19 +238,19 @@
     "        self.fc1 = torch.nn.Linear(self.input_size, self.hidden_size)\n",
     "        self.relu = torch.nn.ReLU()\n",
     "        self.fc2 = torch.nn.Linear(self.hidden_size,num_labels)\n",
-    "        self.sigmoid = torch.nn.Sigmoid()\n",
+    "        #self.sigmoid = torch.nn.Sigmoid()\n",
     "        \n",
     "    def forward(self, x):\n",
     "        hidden = self.fc1(x)\n",
     "        relu = self.relu(hidden)\n",
     "        output = self.fc2(relu)\n",
-    "        output = self.sigmoid(output)\n",
+    "        #output = self.sigmoid(output)\n",
     "        return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,33 +299,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([100, 50])\n",
-      "done\n",
       "torch.Size([100, 50])\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IndexError",
+     "evalue": "Target 50 is out of bounds.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-506-d05b994e38ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_outputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloss_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_outputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mopt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"done\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\torch\\tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[0;32m    193\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[1;33m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    194\u001b[0m         \"\"\"\n\u001b[1;32m--> 195\u001b[1;33m         \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    196\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    197\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[0;32m     97\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m     98\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 99\u001b[1;33m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[0;32m    100\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-134-ba9139f15135>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mbatch_outputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_outputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloss_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbatch_outputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_labels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mretain_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mopt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    530\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    531\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 532\u001b[1;33m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    533\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    534\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    202\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    203\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 204\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    205\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    206\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mnll_loss\u001b[1;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[0;32m   1836\u001b[0m                          .format(input.size(0), target.size(0)))\n\u001b[0;32m   1837\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1838\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1839\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1840\u001b[0m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: Target 50 is out of bounds."
      ]
     }
    ],
    "source": [
+    "#training\n",
     "n_epochs = 2\n",
     "batch_size = 100\n",
     "m = nn.LogSoftmax(dim=1)\n",
@@ -281,18 +351,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cdata=[]\n",
-    "target = \n",
-    "for l,d in b:\n",
-    "    bow_vec = make_bow_vector(d, indexed_vocab)\n",
-    "    cdata.append(list(bow_vec.tolist()))\n",
-    "    target.append(labels[l])\n",
-    "c_tensor= torch.FloatTensor(cdata)\n",
-    "t_tensor=torch.LongTensor(target)\n",
-    "y_pred = bow(c_tensor)\n",
-    "loss = loss_function(y_pred,t_tensor)\n",
-    "loss.backward()\n",
-    "opt.step()"
+    "# cdata=[]\n",
+    "# target = \n",
+    "# for l,d in b:\n",
+    "#     bow_vec = make_bow_vector(d, indexed_vocab)\n",
+    "#     cdata.append(list(bow_vec.tolist()))\n",
+    "#     target.append(labels[l])\n",
+    "# c_tensor= torch.FloatTensor(cdata)\n",
+    "# t_tensor=torch.LongTensor(target)\n",
+    "# y_pred = bow(c_tensor)\n",
+    "# loss = loss_function(y_pred,t_tensor)\n",
+    "# loss.backward()\n",
+    "# opt.step()"
    ]
   },
   {
@@ -301,24 +371,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# batch_size =4 # or whatever\n",
-    "# epochs = 2\n",
-    "# for epoch in range(epochs):\n",
-    "#     for i in range(0,len(data), batch_size):\n",
-    "#         opt.zero_grad()\n",
-    "#         b=data[i:batch_size]\n",
-    "#         cdata=[]\n",
-    "#         target=[]\n",
-    "#         for l,d in b:\n",
-    "#             bow_vec = make_bow_vector(d, indexed_vocab)\n",
-    "#             cdata.append(list(bow_vec.tolist()))\n",
-    "#             target.append(labels[l])\n",
-    "#         c_tensor= torch.FloatTensor(cdata)\n",
-    "#         t_tensor=torch.LongTensor(target)\n",
-    "#         y_pred = bow(c_tensor)\n",
-    "#         loss = loss_function(y_pred,t_tensor)\n",
-    "#         loss.backward()\n",
-    "#         opt.step()"
+    "#testing\n",
+    "for label,data in test:\n",
+    "    bow_vec = make_bow_vector(data, indexed_vocab)\n",
+    "    logprobs = bow(bow_vec)\n",
+    "    print(logprobs)\n",
+    "    pred = np.argmax(logprobs.data.numpy())\n",
+    "    print('prediction: {}'.format(pred))\n",
+    "    print('actual: {}'.format(label))\n"
    ]
   },
   {
@@ -354,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
