--- a/textMining_Cleaned.ipynb
+++ b/textMining_Cleaned.ipynb
@@ -113,7 +113,7 @@
     "            total_words_orig.append(word)\n",
     "    total_words = list(set(total_words_orig))\n",
     "    total_words_str = ' '.join(total_words)\n",
-    "    vocab = set(total_words_str.split()) # compute vocab, 6 words\n",
+    "    vocab = set(total_words_str.split()) \n",
     "    word2idx = {word: idx for idx, word in enumerate(vocab)} # create word index\n",
     "    return word2idx\n",
     "word2idx=create_vocab(data)\n",
@@ -253,13 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([19, 11, 13, 42, 24, 40,  8, 18, 37,  7, 15, 29, 40, 40, 13, 49,  3, 49,\n",
-      "        35, 40, 13, 42, 18, 28, 42, 42, 42, 20, 40, 37,  2, 18, 18, 18, 35, 18,\n",
-      "        44, 10, 37, 18, 43,  3,  3,  7, 49,  8, 11, 19, 37,  3, 18, 49, 26, 18,\n",
-      "        49, 35, 18, 18, 18,  0, 49,  6, 50, 18,  7, 42, 35, 50, 35,  9,  8,  3,\n",
-      "        37, 43, 26, 18, 18, 18, 11, 18, 36, 35, 16, 35, 18, 22, 18, 29, 40, 42,\n",
-      "        18, 18, 40, 11, 21, 49, 49, 18, 18, 49])\n",
-      "tensor(-0.0195, grad_fn=<NllLossBackward>)\n"
+      "tensor(-0.0194, grad_fn=<NllLossBackward>)\n"
      ]
     }
    ],
@@ -275,7 +269,6 @@
     "        batch_features = training_set[indices]\n",
     "        batch_labels = torch.LongTensor([label for label, sent in train[indices]])\n",
     "        batch_outputs = bow(batch_features)\n",
-    "        print(batch_labels)\n",
     "        loss = loss_function(batch_outputs, batch_labels)\n",
     "        print(loss)\n",
     "        loss.backward(retain_graph=True)\n",
@@ -5439,7 +5432,7 @@
     "test_len =len(test)\n",
     "correct=0\n",
     "for label,data in test:\n",
-    "    bow_vec = make_bow_vector(data, indexed_vocab)\n",
+    "    bow_vec = make_bow_vector(data, word2idx)\n",
     "    logprobs = bow(bow_vec)\n",
     "    print(logprobs)\n",
     "    pred = np.argmax(logprobs.data.numpy())\n",
