--- a/textMining_Cleaned.ipynb
+++ b/textMining_Cleaned.ipynb
@@ -327,7 +327,7 @@
     "        opt.zero_grad()\n",
     "        indices = permutation[i:i + batch_size]\n",
     "        batch_features = training_set[indices]\n",
-    "        #batch_features = batch_features.reshape(-1, 300).to(device)\n",
+    "        batch_features = batch_features.reshape(-1, 300).to(device)\n",
     "        batch_labels = torch.LongTensor([label for label, sent in train[indices]])\n",
     "        batch_features = batch_features.reshape(-1, 1).to(device)\n",
     "        batch_outputs = model(batch_features)\n",
